--- a/index.html
+++ b/index.html
@@ -2,127 +2,203 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Valentine’s Day Niranjana ❤️</title>
-
-<meta property="og:title" content="Happy Valentine’s Day Niranjana ❤️">
-<meta property="og:description" content="A small pink world of love – from Saravana Kumar 💖">
-<meta property="og:type" content="website">
-<meta property="og:image" content="15A5958B-E8BF-4158-8C14-749F611614D3.jpeg">
+<title>Niranjana ❤️ My Valentine</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap');
+
+*{margin:0;padding:0;box-sizing:border-box;}
+
 body{
- margin:0;
- font-family:'Segoe UI',sans-serif;
- background:linear-gradient(to bottom,#ffd1dc,#ff9eb5);
- color:#4a0033;
- text-align:center;
- overflow-x:hidden;
+    height:100vh;
+    background:linear-gradient(120deg,#ff5f6d,#ffc371,#ff4d6d);
+    overflow:hidden;
+    font-family:'Poppins',sans-serif;
+    color:white;
 }
-.container{padding:40px 20px;animation:fade 2.5s;}
-@keyframes fade{
- from{opacity:0;transform:translateY(20px);}
- to{opacity:1;transform:translateY(0);}
+
+/* Opening */
+.loader{
+    position:fixed;
+    inset:0;
+    background:black;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    z-index:999;
+    animation:fadeOut 2s ease forwards;
+    animation-delay:3s;
 }
-.card{
- background:rgba(255,255,255,.88);
- border-radius:20px;
- padding:25px;
- margin:30px auto;
- max-width:850px;
- box-shadow:0 8px 20px rgba(0,0,0,.15);
+.loader h1{
+    font-family:'Great Vibes',cursive;
+    font-size:48px;
+    animation:heartbeat 1s infinite;
 }
-h1{color:#e6005c;font-size:2.6em;}
-.gallery{
- display:grid;
- grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
- gap:15px;
-}
-.gallery img{
- width:100%;
- border-radius:15px;
- box-shadow:0 6px 15px rgba(0,0,0,.25);
-}
-.footer{margin:50px 0;font-size:1.2em;color:#b30047}
+@keyframes fadeOut{to{opacity:0;visibility:hidden;}}
+@keyframes heartbeat{0%,100%{transform:scale(1);}50%{transform:scale(1.2);}}
+
+/* Hearts */
 .heart{
- position:fixed;
- top:-10px;
- font-size:20px;
- animation:fall linear infinite;
- color:#ff3366;
+    position:absolute;
+    width:18px;
+    height:18px;
+    background:red;
+    transform:rotate(45deg);
+    animation:float 8s linear infinite;
 }
-@keyframes fall{to{transform:translateY(110vh);opacity:0}}
-.candle{
- width:40px;height:90px;background:#fff;margin:20px auto;
- border-radius:10px;position:relative;
+.heart::before,.heart::after{
+    content:'';
+    position:absolute;
+    width:18px;
+    height:18px;
+    background:red;
+    border-radius:50%;
 }
-.flame{
- width:18px;height:25px;background:orange;
- border-radius:50%;position:absolute;top:-22px;left:11px;
- animation:flicker .8s infinite alternate;
+.heart::before{top:-9px;left:0;}
+.heart::after{left:-9px;top:0;}
+
+@keyframes float{
+    0%{bottom:-40px;opacity:0;}
+    50%{opacity:1;}
+    100%{bottom:110%;transform:translateX(80px) rotate(360deg);opacity:0;}
 }
-@keyframes flicker{from{transform:scale(1);}to{transform:scale(1.1);}}
-.moon{
- width:90px;height:90px;background:#fff5cc;
- border-radius:50%;margin:20px auto;
- box-shadow:0 0 25px #fff5cc;
+
+/* Roses */
+.rose{
+    position:absolute;
+    font-size:24px;
+    animation:roseFloat 10s linear infinite;
+}
+@keyframes roseFloat{
+    0%{bottom:-30px;opacity:0;}
+    50%{opacity:1;}
+    100%{bottom:110%;opacity:0;}
+}
+
+/* Content */
+.container{
+    position:relative;
+    z-index:2;
+    height:100vh;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    padding:20px;
+}
+
+.title{
+    font-family:'Great Vibes',cursive;
+    font-size:55px;
+    animation:glow 2s infinite alternate;
+}
+.name{
+    color:#ffe6ec;
+    text-shadow:0 0 25px #ff1e56;
+}
+
+@keyframes glow{
+    from{text-shadow:0 0 10px pink;}
+    to{text-shadow:0 0 30px red;}
+}
+
+.message{
+    margin-top:20px;
+    font-size:18px;
+    animation:slideUp 2s ease;
+}
+@keyframes slideUp{
+    from{opacity:0;transform:translateY(40px);}
+    to{opacity:1;transform:translateY(0);}
+}
+
+.box{
+    margin-top:30px;
+    padding:20px;
+    border:2px solid white;
+    border-radius:15px;
+    background:rgba(255,255,255,0.12);
+    animation:pulse 3s infinite;
+}
+@keyframes pulse{
+    0%,100%{transform:scale(1);}
+    50%{transform:scale(1.05);}
+}
+
+button{
+    margin-top:25px;
+    padding:12px 30px;
+    border:none;
+    border-radius:25px;
+    background:white;
+    color:#ff4d6d;
+    font-size:16px;
+    cursor:pointer;
+}
+button:hover{
+    background:#ff4d6d;
+    color:white;
 }
 </style>
 </head>
 
 <body>
-<audio autoplay loop>
- <source src="romantic_song.mp3" type="audio/mpeg">
-</audio>
 
-<div class="container">
-<h1>💕 Happy Valentine’s Day Niranjana 💕</h1>
-<p>Indha chinna website – un sirippukkaaga mattum ❤️</p>
-
-<div class="moon"></div>
-
-<div class="card">
-<h2>💌 En Kaadhal 💌</h2>
-<p>
-Nee ennoda life-la vandhadhukku apram<br>
-Ella naalum romba azhaga irukku 🥰<br><br>
-En manasu eppovum un pakkam dhaan ❤️
-</p>
-</div>
-
-<div class="card">
-<h2>📸 Our Moments 📸</h2>
-<div class="gallery">
-<img src="15A5958B-E8BF-4158-8C14-749F611614D3.jpeg">
-<img src="68FF86ED-E82E-4B5F-A1DD-BCDD35D40931.jpeg">
-<img src="9A812FAD-2882-4359-9995-DABC567E70B6.jpeg">
-<img src="2821C4FF-E8FD-4CF9-8018-91C6A9773801.jpeg">
-<img src="7ED4DE4E-29EC-4185-9D4D-8516642297F1.jpeg">
-<img src="680C90DB-AF1A-4755-AF81-3ACD19541A9B.jpeg">
-<img src="226A6C8B-CB05-4273-A352-4FC99A1EDFD8.jpeg">
-</div>
-</div>
-
-<div class="candle"><div class="flame"></div></div>
-
-<div class="card">
-<h2>💍 Forever 💍</h2>
-<p><b>Forever yours,<br>Saravana Kumar ❤️</b></p>
-</div>
-
-<div class="footer">Made with ❤️ only for you</div>
+<div class="loader">
+    <h1>Love is loading for Niranjana ❤️</h1>
 </div>
 
 <script>
-function heart(){
- const h=document.createElement("div");
- h.className="heart";
- h.innerHTML="❤️";
- h.style.left=Math.random()*100+"vw";
- h.style.animationDuration=4+Math.random()*4+"s";
- document.body.appendChild(h);
- setTimeout(()=>h.remove(),8000);
+for(let i=0;i<30;i++){
+    let h=document.createElement("div");
+    h.className="heart";
+    h.style.left=Math.random()*100+"%";
+    h.style.animationDuration=(5+Math.random()*5)+"s";
+    document.body.appendChild(h);
 }
-setInterval(heart,500);
+
+for(let i=0;i<20;i++){
+    let r=document.createElement("div");
+    r.className="rose";
+    r.innerHTML="🌹";
+    r.style.left=Math.random()*100+"%";
+    r.style.animationDuration=(6+Math.random()*6)+"s";
+    document.body.appendChild(r);
+}
+</script>
+
+<div class="container">
+    <div class="title">
+        Happy Valentine’s Day <br>
+        <span class="name">Niranjana ❤️</span>
+    </div>
+
+    <div class="message">
+        Niranjana, you are not just my love,<br>
+        you are my forever 💖
+    </div>
+
+    <div class="box" id="msgBox">
+        Every heartbeat whispers your name, Niranjana 🌹
+    </div>
+
+    <button onclick="changeMessage()">More Love 💌</button>
+</div>
+
+<script>
+const messages=[
+"Niranjana, my heart chose you ❤️",
+"With you, love feels effortless 💕",
+"You are my safest place, Niranjana 🌸",
+"Every day I fall for you again 💖",
+"My forever has your name – Niranjana 💘"
+];
+
+function changeMessage(){
+    msgBox.innerHTML=messages[Math.floor(Math.random()*messages.length)];
+}
 </script>
 
 </body>
